# FoxholeWarBot

./: .env.example  .gitignore  Cargo.toml  MapChoices.js  Procfile  README.md  config.example.json  config.json  deploy-commands-global.js  deploy-commands-guild.js  deploy-commands.js  eslint.config.mjs  index.config.ts  index.js  package.json  remove-commands.js  serverConfig.js  tsconfig.json
.github/workflows/: stale.yml
commands/: getMap.js  help.js  maps.js  setShard.js  warReport.js  warState.js
docs/: faq.md  index.md  privacy.md  tos.md
oldVersion/: index.ts
oldVersion/commands/: getMap.ts  help.ts  warState.ts
oldVersion/mongodb/: serverConfig.ts
src/: Util.ts  args.rs  deploy-cmd-dev.ts  deploy-cmd-global.ts  discord.d.ts  image_processing.rs  index.d.ts  index.ts  main.rs  purge-cmd-dev.ts  purge-cmd-global.ts  serverConfig.ts  utils.ts
src/@types/: discord.d.ts  pocketbase.d.ts
src/api_definitions/: foxhole.rs  mod.rs
src/commands/: getMap.ts  get_map.rs  help.ts  maps.ts  mod.rs  remove_report.rs  schedule_help.rs  schedule_report.rs  setShard.ts  set_guild_settings.rs  warReport.ts  warState.ts  war_report.rs  war_state.rs
src/commands/admin/: setShard.ts  setVisibility.ts
src/commands/guild/: getMap.ts  warReport.ts  warState.ts
src/util/: getDynamic.ts  getStatic.ts
src/utils/: cache.rs  cron.rs  db.rs  image_processing.rs  mod.rs  request_processing.rs
src/utils/api_definitions/: foxhole.rs
